syntax = "proto3";

package fetch_is_mnt;

message DriveInfo {
  string mount = 1;
  string name = 2;
}

message TotalSpaceInfo {
  string mount = 1;
  uint64 total_space = 2;
}

message MntRequest {
  string mntpoint = 1;
}

service Mnt {
  rpc Drive (MntRequest) returns (DriveInfo) {}
  rpc TotalSpace (MntRequest) returns (TotalSpaceInfo) {}
}


